--- a/react-app/src/styles/Tabela.css
+++ b/react-app/src/styles/Tabela.css
@@ -1,25 +1,28 @@
+/* Table container */
 .table {
     display: table;
     width: 100%;
     border-collapse: collapse;
 }
 
+/* Table row */
 .row {
     display: table-row;
 }
 
+/* Table header cell */
+.header-cell {
+    display: table-cell;
+    background-color: #f2f2f2;
+    color: #333;
+    font-weight: bold;
+    padding: 8px;
+    border: 1px solid #ddd;
+}
+
+/* Table cell */
 .cell {
     display: table-cell;
-    border: 1px solid #ccc;
+    border: 1px solid #ddd;
     padding: 8px;
-}
-
-.spaced-span {
-    display: table-cell;
-    margin: 5px;
-    padding: 5px;
-}
-
-.button-content-color {
-    color: red;
 }
